force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/Apttus_Billing__DunningPolicyLineItem__c.object-meta.xml
<CustomObject>
    <description>This stores dunning policy line item information. Each line item represents a reminder. Each reminder could have a different reminder interval. Each reminder could have a different email template.</description>
    <label>Dunning Policy Line Item</label>
    <nameField>
        <label>Dunning Policy Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dunning Policy Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>