force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This flag should not be displayed on UI. Use this flag to mark dunning policy line items as inactive whenever user decreases the number of reminders on the dunning policy</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>