force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__AttachInvoicePDF__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AttachInvoicePDF__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Attach Invoice PDF attachment to the email being sent</description>
    <inlineHelpText>Attach Invoice PDF attachment to the email being sent</inlineHelpText>
    <label>Attach Invoice PDF</label>
    <type>Checkbox</type>
</CustomField>