force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__Baseline__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Baseline__c</fullName>
    <description>Baseline to calculate the interval value to send reminder</description>
    <inlineHelpText>Baseline to calculate the interval value to send reminder</inlineHelpText>
    <label>Baseline</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Invoice Due Date</fullName>
                <default>true</default>
                <label>From Invoice Due Date</label>
            </value>
            <value>
                <fullName>From Previous Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>