force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__DunningPolicyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DunningPolicyId__c</fullName>
    <description>To link Dunning Policy Line Item with Dunning Policy</description>
    <label>Dunning Policy</label>
    <referenceTo>Apttus_Billing__DunningPolicy__c</referenceTo>
    <relationshipLabel>Dunning Policy Line Items</relationshipLabel>
    <relationshipName>DunningPolicyLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>