force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EmailTemplate__c</fullName>
    <description>API name of email template</description>
    <inlineHelpText>API name of email template</inlineHelpText>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>