force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__IntervalType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IntervalType__c</fullName>
    <description>Type of the interval</description>
    <label>Interval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Hour(s)</fullName>
                <isActive>false</isActive>
                <label>Hour(s)</label>
            </value>
            <value>
                <fullName>Week(s)</fullName>
                <isActive>false</isActive>
                <label>Week(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>