force-app/main/default/objects/Apttus_Billing__DunningPolicyLineItem__c/fields/Apttus_Billing__IntervalValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IntervalValue__c</fullName>
    <description>Value of the interval E.g. 1,5,24 etc.</description>
    <inlineHelpText>Value of the interval E.g. 1,5,24 etc.</inlineHelpText>
    <label>Interval Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>